Bug 73709
Mouse hand arrow not showing up while doing mouse over on tag, on IE.
Probably due to IE not being good with multi-class selectors.
The order of the rules matters, so I just moved the TagBubble rule after the AddrBubble and removed the multi-selector.

http://bugzilla.zimbra.com/show_bug.cgi?id=73709

Copied from Perforce
 Change: 383647

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -585,20 +585,7 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 }
 
 
-.AddrBubble.TagBubble {
-	@ActiveCursor@ /*otherwise .AddrBubble cursor is set to default. see .addrBubble, .attachmentBubble { elsewhere in this file*/ 
-}
-.TagBubble {
-	@ActiveCursor@
-	@NoWrap@ 
-	display:inline-block; 
-	vertical-align:middle;
-}
 
-.TagBubble .TagName,
-.TagBubble .ImgBubbleDelete {
-	display:inline-block; vertical-align:middle;
-}
 
 .TagImage {
 	display:inline-block; vertical-align:middle; padding-right:2px;
@@ -1271,6 +1258,19 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 .attachmentBubble {
 	@InactiveCursor@
 	background-color:#EEE;
+}
+
+/* NOTE: this has to be AFTER the .addrBubble definition above so it overrides it (the element is of multi class "addrBubble tagBubble")  - doing it this way since multi-selection doesn't work in IE*/
+.TagBubble {
+	@NoWrap@
+	display:inline-block;
+	vertical-align:middle;
+	@ActiveCursor@ /*otherwise .AddrBubble cursor is set to default (inactive). see above*/
+}
+
+.TagBubble .TagName,
+.TagBubble .ImgBubbleDelete {
+	display:inline-block; vertical-align:middle;
 }
 
 .addrBubble-selected {
